--- a/src/components/Collections/Table/TableWithPagination/TableWithPagination.module.css
+++ b/src/components/Collections/Table/TableWithPagination/TableWithPagination.module.css
@@ -5,6 +5,7 @@
 }
 
 .footer {
+  box-sizing: border-box;
   display: flex;
   align-items: center;
   justify-content: space-between;
